--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     </header>
 
     <section id="home" class="hero">
-        <h1>Your Name</h1>
-        <p>Web Developer & Designer</p>
+        <h1>Trevor Atienza</h1>
+        <p>BSIT 3 - B1</p>
         <a href="#portfolio" class="cta-button">View My Work</a>
     </section>
 
     <section id="about" class="about">
         <h2>About Me</h2>
-        <p>Your bio goes here. Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+        <p>sorry maam nasira ko yung main kanina</p>
     </section>
 
     <section id="portfolio" class="portfolio">
@@ -46,7 +46,7 @@
 
     <section id="contact" class="contact">
         <h2>Contact Me</h2>
-        <p>Feel free to get in touch. Email: your@email.com</p>
+        <p>Feel free to get in touch. Email: trevoratienza53@gmail.com</p>
     </section>
 
     <footer>
@@ -56,7 +56,7 @@
             <li><a href="#portfolio">Portfolio</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
-        <p>&copy; 2023 Your Name. All rights reserved.</p>
+        <p>&copy; 2025 Trevor Atienza. All rights reserved.</p>
     </footer>
 </body>
 </html>
